--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <div class="letter" id='13'></div>
             <div class="letter" id='14'></div>
             <div class="letter" id='15'></div>
+            <div class="btn" id="addDivButton">+</div>
+            <div class="btn" id="rmvDivButton">-</div>
+
         </div>
         <div class= "row" id='r2'>
             <div class="letter "></div>
@@ -36,6 +39,7 @@
             <div class="letter "></div>
             <div class="letter "></div>
             <div class="letter "></div>
+            
         </div>
         <div class= "row" id='r3'>
             <div class="letter"></div>
@@ -43,6 +47,7 @@
             <div class="letter"></div>
             <div class="letter"></div>
             <div class="letter"></div>
+
         </div>
         <div class= "row" id='r4'>
             <div class="letter"></div>
@@ -59,10 +64,9 @@
             <div class="letter"></div>
         </div>
     </div>
-    <button id="addDivButton">Adicionar Div</button>
-    <button id="rmvDivButton">Remover Div</button>
+    <div class="btn-container">
+    </div>
     <button id="printDivsButton">Pritar Plavaras Div</button>
-
 
     <script src="main.js"></script>
 </body>
