--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <div class="letter" id='13'></div>
             <div class="letter" id='14'></div>
             <div class="letter" id='15'></div>
-            <div class="btn" id="addDivButton">+</div>
-            <div class="btn" id="rmvDivButton">-</div>
+            <div class="btn btnAdd" id="addDivButton">+</div>
+            <div class="btn btnRmv" id="rmvDivButton">-</div>
 
         </div>
         <div class= "row" id='r2'>
