--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="letter"></div>
         </div>
     </div>
-    <button id="printDivsButton">Pritar Plavaras Div</button>
+    <div id="printDivsButton">▷</div>
 
     <script src="main.js"></script>
 </body>
