--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <h1 class="header-h1"></h1>
 
     </header>
+    <div class="respostas-container" id="respostas-container">
+        <h2 class="respostas-heading" id="respostas-heading"></h2>
+        <div class="close" id="close-btn">x</div>
+        <div class="respostas" id="respostas"></div>
+    </div>
     <!-- Conteúdo da sua página aqui -->
     <div class="grid-container">
         <div class= "row" id='r0'>
